# mcmaster-navigator-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: analyze_run.py  mcmaster_retrieval_benchmark.py  near_ambiguity_benchmark.py  negative_ambiguity_benchmark.py
paper/: README.md  asme_idetc_mcmaster_navigator.bib  asme_idetc_mcmaster_navigator.tex  mcmaster_navigator_paper_draft.md
src/mcmaster_navigator_mcp/: catalog_text.py  extract.py  models.py  navigator.py  rank.py  schema_resolver.py  server.py
tests/: test_extract.py  test_llm_schema_filter.py  test_server_worker.py
