[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "mcmaster-navigator-mcp"
version = "0.5.4"
description = "Unofficial headless MCP server for navigating McMaster-Carr and resolving exact part numbers"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Chancel Lavoie" }
]
keywords = ["mcp", "mcmaster-carr", "parts", "cad", "browser-automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "beautifulsoup4>=4.12",
  "certifi>=2024.2",
  "mcp>=1.0",
  "seleniumbase>=4.25",
]

[project.scripts]
mcmaster-navigator-mcp = "mcmaster_navigator_mcp.server:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "twine>=5",
]

[project.urls]
Homepage = "https://github.com/cmuchancel/mcmaster-navigator-mcp"
Repository = "https://github.com/cmuchancel/mcmaster-navigator-mcp"
Issues = "https://github.com/cmuchancel/mcmaster-navigator-mcp/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcmaster_navigator_mcp"]
